--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "Ladda",
   "version": "0.5.1",
-  "main": ["./dist/ladda.min.js", "./dist/spin.mins.js"],
+  "main": ["./dist/ladda.min.js", "./dist/spin.min.js"],
   "devDependencies": {
     "grunt-contrib-jshint": "~0.2.0",
     "grunt-contrib-uglify": "~0.1.1",
