--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "ladda",
   "version": "0.9.2",
-  "main": ["./dist/ladda.min.js"],
+  "main": ["./dist/ladda.min.js","./dist/ladda.min.css"],
   "dependencies": {
     "spin.js": "1.3.x"
   },
