--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "grunt-contrib-connect": "~0.2.0",
     "grunt": "~0.4.0"
   },
+  "browser": {
+    "spin.js": "./js/spin.js"
+  },
   "licenses": [
     {
       "type": "MIT",
