--- a/bower.json
+++ b/bower.json
@@ -5,6 +5,13 @@
     "./dist/ladda.min.js",
     "./dist/ladda.min.css"
   ],
+  "ignore": [
+    "Gruntfile.js",
+    "package.json",
+    "js/spin.js",
+    "css",
+    "test"
+  ],
   "dependencies": {
     "spin.js": "~2.0.1"
   }
