--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,9 @@
   "version": "0.9.8",
   "main": [
     "./dist/ladda.min.js",
-    "./dist/ladda.min.css"
+    "./dist/ladda.min.css",
+    "./dist/ladda-themeless.min.css",
+    "./dist/spin.min.css"
   ],
   "ignore": [
     "package.json"
