--- a/package.json
+++ b/package.json
@@ -28,12 +28,7 @@
   "browser": {
     "spin.js": "./js/spin.js"
   },
-  "licenses": [
-    {
-      "type": "MIT",
-      "url": "https://github.com/hakimel/Ladda/blob/master/LICENSE"
-    }
-  ],
+  "license": "MIT",
   "dependencies": {
     "spin.js": "^2.0.0"
   }
