--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "main": "./dist/ladda.min",
   "scripts": {
     "test": "grunt jshint",
-    "start": ""
+    "prepublish": "grunt",
+    "start": "grunt serve"
   },
   "author": {
     "name": "Hakim El Hattab",
@@ -18,12 +19,12 @@
     "url": "git://github.com/hakimel/Ladda.git"
   },
   "devDependencies": {
-    "grunt-contrib-jshint": "~0.11.3",
-    "grunt-contrib-uglify": "~0.9.2",
-    "grunt-contrib-watch": "~0.6.1",
-    "grunt-contrib-sass": "~0.8.1",
-    "grunt-contrib-connect": "~0.2.0",
-    "grunt": "~0.4.5"
+    "grunt": "^1.0.1",
+    "grunt-contrib-connect": "^1.0.2",
+    "grunt-contrib-jshint": "^1.1.0",
+    "grunt-contrib-sass": "^1.0.0",
+    "grunt-contrib-uglify": "^3.0.1",
+    "grunt-contrib-watch": "^1.0.0"
   },
   "browser": {
     "spin.js": "./js/spin.js"
