--- a/package.json
+++ b/package.json
@@ -1,8 +1,13 @@
 {
   "name": "ladda",
-  "version": "1.0.6",
+  "version": "2.0.0",
   "description": "Buttons with built-in loading indicators",
   "homepage": "http://lab.hakim.se/ladda",
+  "files": [
+    "dist/*.css",
+    "js/ladda.d.ts",
+    "js/ladda.js"
+  ],
   "main": "./js/ladda.js",
   "types": "./js/ladda.d.ts",
   "scripts": {
@@ -20,16 +25,16 @@
     "url": "git://github.com/hakimel/Ladda.git"
   },
   "devDependencies": {
-    "grunt": "^1.0.1",
+    "grunt": "^1.0.2",
     "grunt-contrib-connect": "^1.0.2",
     "grunt-contrib-jshint": "^1.1.0",
-    "grunt-contrib-sass": "^1.0.0",
-    "grunt-contrib-watch": "^1.0.0",
-    "rollup": "^0.53.3",
-    "rollup-plugin-node-resolve": "^3.0.0"
+    "grunt-contrib-watch": "^1.1.0",
+    "grunt-sass": "^2.1.0",
+    "rollup": "^0.58.2",
+    "rollup-plugin-node-resolve": "^3.3.0"
   },
   "license": "MIT",
   "dependencies": {
-    "spin.js": "^3.1.0"
+    "spin.js": "^4.0.0"
   }
 }
