--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Buttons with built-in loading indicators",
   "homepage": "http://lab.hakim.se/ladda",
   "files": [
+    "css/*.scss",
     "dist/*.css",
     "js/ladda.d.ts",
     "js/ladda.js"
